# klee

./: .gitignore  CMakeLists.txt  CMakeLists.txt.rej  README-UTBot.md  build.sh  chopper.patch
.github/workflows/: build-in-base-env.yml  build.yaml  clang-format.yaml
docs/: tree_incrementality.py
examples/static_analysis_results/: result_FN_SecB_ForwardNull_filed.json  result_NullReturn_BadCase_WhiteBox01.json  result_SecB_ForwardNull.json
include/klee/: ASContext.h  AllocationRecord.h  klee.h
lib/: CMakeLists.txt
lib/Analysis/: AAPass.cpp  Annotator.cpp  CMakeLists.txt  Cloner.cpp  Inliner.cpp  ModRefAnalysis.cpp  ReachabilityAnalysis.cpp  SVFPointerAnalysis.cpp  SliceGenerator.cpp  Slicer.cpp
lib/Basic/: KTest.cpp
lib/Core/: ASContext.cpp  AddressManager.cpp  AddressManager.h  AddressSpace.cpp  AddressSpace.h  AllocationRecord.cpp  CMakeLists.txt  CodeEvent.h  CodeLocation.cpp  CodeLocation.h  ConstantAddressSpace.cpp  ConstantAddressSpace.h  Context.cpp  DistanceCalculator.cpp  EventList.cpp  EventRecorder.cpp  EventRecorder.h  ExecutionState.cpp  ExecutionState.h  Executor.cpp  Executor.cpp.rej  Executor.h  ExecutorUtil.cpp  ExternalDispatcher.cpp  GetElementPtrTypeIterator.h  ImpliedValue.cpp  KTestBuilder.cpp  KTestBuilder.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  ObjectManager.cpp  ObjectManager.h  PForest.cpp  PForest.h  PTree.cpp.rej  PTree.h  Searcher.cpp  Searcher.cpp.rej  (+18 more)
lib/Expr/: ArrayCache.cpp  ArrayExprOptimizer.cpp  ArrayExprRewriter.cpp  ArrayExprVisitor.cpp  Assignment.cpp  AssignmentGenerator.cpp  CMakeLists.txt  CMakeLists.txt.rej  Constraints.cpp  Expr.cpp  ExprEvaluator.cpp  ExprPPrinter.cpp  ExprSMTLIBPrinter.cpp  ExprUtil.cpp  ExprVisitor.cpp  IndependentConstraintSetUnion.cpp  IndependentSet.cpp  Parser.cpp  Path.cpp  SourceBuilder.cpp  SymbolicSource.cpp
lib/Module/: Annotation.cpp  CMakeLists.txt  CodeGraphDistance.cpp  InstructionInfoTable.cpp  KInstruction.cpp  KModule.cpp  KModule.cpp.rej  KType.cpp  LocalVarDeclarationFinderPass.cpp  LocationInfo.cpp  Locations.cpp  ModuleUtil.cpp  Passes.h  RaiseAsm.cpp  ReturnLocationFinderPass.cpp  ReturnToVoidFunctionPass.cpp  SarifReport.cpp  Target.cpp
lib/Runner/: parse_static_analysis_json.cpp  run_klee.cpp
lib/Solver/: Arrays.cpp  Arrays.h  AssignmentValidatingSolver.cpp  BV.cpp  BV.h  BitwuzlaBuilder.cpp  BitwuzlaSolver.cpp  CMakeLists.txt  CachingSolver.cpp  CexCachingSolver.cpp  ConcretizationManager.cpp  ConcretizingSolver.cpp  ConstructSolverChain.cpp  CoreSolver.cpp  DummySolver.cpp  FPBV.cpp  FPBV.h  FastCexSolver.cpp  IncompleteSolver.cpp  IndependentSolver.cpp  LIA.cpp  LIA.h  Solver.cpp  (+40 more)
scripts/: kleef
test/: lit.cfg.rej  lit.site.cfg.in.rej
unittests/: CMakeLists.txt
unittests/Builder/: CMakeLists.txt  Z3AdapterTest.cpp
unittests/Memory/: CMakeLists.txt  MemoryTest.cpp
unittests/Parsing/: CMakeLists.txt  ParsingTest.cpp
unittests/Parsing/resources/: SimpleSymbolicSizeConstantAddressSource.kquery
(+190 files in other folders)
